Two issues were fixed within the Delfini Menu in this revision: [1] the menu was given a z-index of 10 so that it would always appear on top of other elements, and [2] the height of the wrapper was adjusted to 24px high so that the line of text surrounding the element wouldn't jump when the element was opened and closed.

--- a/stylesheets/delfini.all.css
+++ b/stylesheets/delfini.all.css
@@ -507,7 +507,7 @@ button.large, input[type=submit].large, input[type=reset].large, input[type=butt
 
 div.dropdownWrapper {
 	display: inline-block;
-	height: 25px;
+	height: 24px;
 	margin: 0px;
 	min-width: 25px;
 	padding: 0px;
@@ -598,6 +598,7 @@ ul.dropdown.open {
 	overflow-y: auto;
 	max-height: 500px;
 	padding: 5px 23px 5px 10px;
+	z-index: 10;
 }
 
 ul.dropdown.open li {
