--- a/stylesheets/delfini.menu.css
+++ b/stylesheets/delfini.menu.css
@@ -38,7 +38,7 @@
 
 div.dropdownWrapper {
 	display: inline-block;
-	height: 25px;
+	height: 24px;
 	margin: 0px;
 	min-width: 25px;
 	padding: 0px;
@@ -129,6 +129,7 @@ ul.dropdown.open {
 	overflow-y: auto;
 	max-height: 500px;
 	padding: 5px 23px 5px 10px;
+	z-index: 10;
 }
 
 ul.dropdown.open li {
